# bevy_mod_gltf_patched

./: Cargo.toml  README.md
examples/: custom_gltf_2d.rs
src/: lib.rs  loader.rs
